<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuddyBuild</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="start">start</string>
    <string name="saveroutine">Save Routine</string>
    <string name="saveexercice">Save Exercice</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="infReps">Reps</string>
    <string name="infWeight">Weight</string>
    <string name="infRestTime">Reset Time</string>
    
    <!-- Dialog -->
    <string name="alertdialog_title_delete">Confirm Delete..</string>
    <string name="alertdialog_texte_sure">This exercice will be definitly deleted?</string>
    <string name="alertdialog_yes">Yes</string>
    <string name="alertdialog_no">No</string>
    <!-- Dialog -->
    <!-- <string name="gopro">Go Pro!</string> -->

	<!-- Title Exercice  -->
	<string name="tlttriceps">Exercices : Triceps</string>
	<string name="tltbiceps">Exercices : Biceps</string>
	<string name="tltback">Exercices : Back</string>
	<string name="tltglutes">Exercices : Glutes</string>
	<string name="tltlowerleg">Exercices : Lower Leg</string>
	<string name="tltcardio">Exercices : Cardio</string>
	<string name="tltshoulder">Exercices : Shoulder</string>
	<string name="tltchest">Exercices : Chest</string>
	<string name="tltforearm">Exercices : Forearm</string>
	<string name="tltAbs">Exercices : Abs</string>
	<string name="tltupperleg">Exercices : Upper Leg</string>
	<string name="tltshowall">Exercices</string>

    <!-- Button Activity -->
    <string name="sign_up">Sign-Up</string>
    <string name="sign_in">Sign-In</string>
    <string name="signupfacebook">Sign up facebook</string>
    <string name="getstarted">Get Started</string>
    <string name="resetpassword">Reset Password</string>

    <!-- Home Activity -->
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Menu Activity -->
    <string name="activity">Activity</string>
    <string name="workout">Workout</string>
    <string name="session">Session</string>

    <!-- Exercice Activity -->
    <string name="saveandrest">Save and Rest</string>
    <string name="viewhistory">View History</string>
    <string name="detail">Detail</string>
    <string name="exercicetips">Exercice tips and description :</string>
    <string name="abs">Abs</string>
    <string name="triceps">Triceps</string>
    <string name="shoulder">Shoulder</string>
    <string name="biceps">Biceps</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="forearm">Forearm</string>
    <string name="glutes">Glutes</string>
    <string name="lowerleg">Lower Leg</string>
    <string name="upperleg">Upper Leg</string>
    <string name="cardio">Cardio</string>
    <string name="showall">Show All</string>

    <!-- Exercice History Activity -->
    <string name="today">Today</string>
    <string name="viewtoday">View your today\'s performances</string>
    <string name="lastsession">Last Session</string>
    <string name="viewlastsession">View your last session\'s performances</string>

    <!-- Reset pwd -->
    <string name="success_maj">SUCCESS</string>
    <string name="pwd_reset_success">Password succefully reset.</string>
    <string name="check_mailbox">Please check your e-mail box.</string>

    <!-- Create routine -->
    <string name="create_routine">Create your routine</string>
    <string name="routine_name">Workout Routine Name</string>
    <string name="routine_type">Routine Type</string>
    <string name="days_week">Days / Weeks</string>
    <string name="description">Description</string>
    <string name="ex_summer_routine">Ex: Summer Routine</string>
    <string name="goal_routine">The goal of this routine is ...\nThe duration is...</string>
    
    <!-- Create exercice -->
    <string name="create_exercice">Create your exercice</string>
    <string name="edit_exercice">Edit your exercice</string>
    <string name="exercice_name">Workout Exercice Name</string>
    <string name="exercice_type">Category</string>
    <string name="ex_crunch_exercice">Ex: Crunch</string>
    <string name="goal_exercice">(optional)The goal of this exercice is ...\nThe duration is...</string>

    <!--
    ************
    MESSAGE 
    ************
    -->

    <string name="email">Email</string>

    <!-- GetStarted Activity -->
    <string name="messwelcome">Welcome to BuddyFit!\nNow you’re a part of the community we would like to know a little more about you to help you</string>
    <string name="messtitle">Congratulations</string>
    <string name="inputgenre">Genre</string>
    <string name="inputbirthdate">Birth Date</string>
    <string name="inputheight">Height</string>
    <string name="inputweight">Weight</string>
    <string name="messwantlater">Want to do it later?</string>
    <string name="messskip">Skip it!</string>

    <!-- SignUpMail Activity -->
    <string name="messexplainmail">Enter the e-mail adress you signed-up with and we will send you a link to reset your password.</string>
    <string name="messwanttryagain">Want to try again?</string>
    <string name="messback">Back</string>

    <!-- Profil Activity -->
    <string name="message">Age :</string>
    <string name="messheight">Height :</string>
    <string name="messweight">Weight :</string>
    <string name="messimc">IMC :</string>
    <string name="messbodymeasurements">Body Measurements</string>

    <!--
    ************
    ITEM
    ************
    -->

    <string name="title_activity_routine_list">RoutineListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_routine_create">RoutineCreateActivity</string>
    <string name="title_activity_routine">RoutineActivity</string>
    <string name="title_activity_activities">ActivitiesActivity</string>
    <string name="title_activity_list_exercice">ListExerciceActivity</string>
    <string name="title_activity_add_exercice">AddExerciceActivity</string>

</resources>