<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MenuActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/txt_buddyfit" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_gopro" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/create_routine"
        android:textColor="@color/white"
        android:textSize="20sp"
       	android:gravity="center"
       	android:background="@color/gris_back_create_routine" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5"
        android:background="@color/white"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_name" 
            android:textColor="@color/gris_back_create_routine"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/ex_summer_routine" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_type" 
            android:layout_marginTop="10dp"
            android:textColor="@color/gris_back_create_routine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@+id/spinner1"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:spinnerMode="dialog"
            android:splitMotionEvents="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_week" 
            android:layout_marginTop="10dp"
            android:textColor="@color/gris_back_create_routine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@+id/spinner1"/>

         <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:spinnerMode="dialog"
            android:splitMotionEvents="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" 
            android:layout_marginTop="10dp"
            android:textColor="@color/gris_back_create_routine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@+id/spinner1"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textImeMultiLine"
            android:hint="@string/goal_routine" />


    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_saveroutine"/>

</LinearLayout>