<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".SignUpActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:src="@drawable/logosimple" />
    
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="left"
	    android:padding="5dp"
	    android:text="@string/messtitle"
	    android:textColor="@color/white"
	    android:textSize="25sp"
	    android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:padding="15dp"
        android:text="@string/messwelcome" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_weight="0.92"
        android:background="@drawable/backgetstarted"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etxt_genre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10" />

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etxt_genre"
                android:layout_alignBottom="@+id/etxt_genre"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/inputgenre"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etxt_birthdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etxt_birthdate"
                android:layout_alignBottom="@+id/etxt_birthdate"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="21dp"
                android:gravity="center"
                android:text="@string/inputbirthdate"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="11dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etxtHeight"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10"/>

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:gravity="center"
                android:text="@string/inputheight"
                android:textSize="17sp" />

        </RelativeLayout>
        
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:layout_marginTop="9dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etxtWeight"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:gravity="center"
                android:text="@string/inputweight"
                android:textSize="17sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/signup"
            android:textColor="@color/white"
            android:text="@string/getstarted"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messwantlater" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/messskip"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>