<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".SignUpActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/logolarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/messexplainmail"
        android:textColor="@color/textecolorpsd" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:layout_weight="0.11"
        android:background="@drawable/backsignupmail"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <EditText
                android:id="@+id/etxtemail2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ems="10" />

            <TextView
                android:id="@+id/txtemail2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etxtemail2"
                android:layout_alignBottom="@+id/etxtemail2"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/btnred"
            android:textColor="@color/white"
            android:text="@string/resetpassword"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messwanttryagain"
            android:textColor="@color/textecolorpsd" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/messback"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>